--- a/code/survivor.csproj
+++ b/code/survivor.csproj
@@ -26,7 +26,7 @@
   <PropertyGroup>
 	<OutputPath>D:\Games\Steam\steamapps\common\sbox/.vs/output/</OutputPath>
 	<DocumentationFile>D:\Games\Steam\steamapps\common\sbox/.vs/output/survivor.xml</DocumentationFile>
-	<RootNamespace>Sandbox</RootNamespace>
+	<RootNamespace>Survivor</RootNamespace>
 	<Nullable>disable</Nullable>
   </PropertyGroup>
 
